Fixed menubar to align with sreach box in rtl view

--- a/src/theme-gcwu-fegc/sass/includes/_default-desktop-screen.scss
+++ b/src/theme-gcwu-fegc/sass/includes/_default-desktop-screen.scss
@@ -517,6 +517,9 @@ a {
 	}
 
 	#gcwu-psnb {
+		.wet-boew-menubar{
+			margin-right: 1px;
+		}
 		.mb-menu {
 			li {
 				&.mb-active {
